# nexus-ledger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: install.sh  load_generator.py  systemd.txt
src/: main.cpp
src/blockchain/: block.cpp  block.h  blockchain.cpp  blockchain.h  transaction.cpp  transaction.h
src/core/: node.cpp  node.h
src/crypto/: crypto.cpp  crypto.h
src/metrics/: metrics_registry.cpp  metrics_registry.h
src/monitoring/: docker-compose.yml  prometheus.yml
src/network/: client.cpp  client.h  message.h  peer.cpp  peer.h  server.cpp  server.h
src/storage/: ledger_db.cpp  ledger_db.h  schema.sql
